# CUDA_Collision_Physics_Engine

./: CMakeLists.txt  README.md
src/: main.cpp
src/physics/: physic_object.hpp  physics_solver.cu  physics_solver.hpp
src/renderer/: gpu_vertex_data.hpp  renderer.cpp  renderer.hpp  update_vertex_array.cu
